--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -7,9 +7,10 @@
 
     {{ form_start(registrationForm) }}
         {{ form_row(registrationForm.email) }}
-        {{ form_row(registrationForm.plainPassword, {
-            label: 'Password'
-        }) }}
+        {{ form_row(registrationForm.pseudo)}}
+        {{ form_row(registrationForm.password.first)}}
+        {{ form_row(registrationForm.password.second)}}
+
         {{ form_row(registrationForm.agreeTerms) }}
 
         <button type="submit" class="btn">Register</button>
