--- a/templates/nav.html.twig
+++ b/templates/nav.html.twig
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Une Petite Mousse</a>
+    <a class="navbar-brand fst-italic" href="{{ path('app_home') }}">Une Petite Mousse</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -15,7 +15,7 @@
             Dashboard
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="#">Gestion des Bières</a></li>
+            <li><a class="dropdown-item" href="{{ path('app_admin_products_index') }}">Gestion des Bières</a></li>
             <li><a class="dropdown-item" href="#">Gestion des Styles</a></li>
             <li><a class="dropdown-item" href="#">Gestion des Brasseries</a></li>
             <li><a class="dropdown-item" href="#">Gestion des Pays</a></li>
@@ -23,14 +23,11 @@
             <li><a class="dropdown-item" href="#">Déconnexion</a></li>
           </ul>
         </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-        </li>
       </ul>
-      <form class="d-flex">
+      {# <form class="d-flex">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
+      </form> #}
     </div>
   </div>
 </nav>
