--- a/public/css/style.css
+++ b/public/css/style.css
@@ -33,6 +33,12 @@
     background-color: #FED925;
 }
 
+/* .bulles{
+    border: 2px solid red;
+    height: 100px;
+    width: 100px;
+} */
+
 /* Background */
 
 .bck{
