--- a/templates/nav.html.twig
+++ b/templates/nav.html.twig
@@ -1,36 +1,42 @@
-<nav class="navbar navbar-expand-lg navbar-light p-3">
-  <div class="container-fluid">
+<div class="nav_container">
+  <nav class="navbar navbar-expand-lg navbar-light p-3">
+    
+    <div class="container-fluid">
 
-    <a class="navbar-brand fw-bold fs-2" href="{{ path('app_home')}}">🍺 UNE PETITE MOUSSE</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Nos Mousses</a>
-        </li>
+      <a class="navbar-brand fw-bold fs-2" href="{{ path('app_home')}}">🍺 UNE PETITE MOUSSE</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="">Nos Mousses</a>
+            {#                     href ->           {{ path('catalogue') }}        #}
+          </li>
 
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Dashboard
-          </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="{{ path('app_admin_products_index') }}">Gestion des Bières</a></li>
-            <li><a class="dropdown-item" href="#">Gestion des Styles</a></li>
-            <li><a class="dropdown-item" href="#">Gestion des Brasseries</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li class="btn-logout"><a class="dropdown-item" href="#">Déconnexion</a></li>
-          </ul>
-        </li>
-      </ul>
-      {# <form class="d-flex">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form> #}
+          {% if app.user %}
+          {% if is_granted("ROLE_ADMIN") %}
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle text-danger" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Dashboard
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="{{ path('app_admin_products_index') }}">Gestion des Bières</a></li>
+                <li><a class="dropdown-item" href="#">Gestion des Styles</a></li>
+                <li><a class="dropdown-item" href="#">Gestion des Brasseries</a></li>
+                <li><hr class="dropdown-divider"></li>
+                <li class="btn-logout"><a class="dropdown-item" href="#">Déconnexion</a></li>
+              </ul>
+            </li>
+          {% endif %}
+          {% endif %}
+        </ul>
+      </div>
     </div>
-  </div>
-</nav>
+
+  </nav>
+  <div class="bg-navbar"></div>
+</div>
 
 <div id="connexion_btn_zone">
    {% if not app.user  %}
