--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -3,7 +3,8 @@
 {% block title %} Connexion | {{ parent() }}{% endblock %}
 
 {% block body %}
-<form method="post">
+<div class="row text-center justify-content-center">
+<form class="col-md-4" method="post">
     {% if error %}
         <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
     {% endif %}
@@ -14,11 +15,11 @@
         </div>
     {% endif %}
 
-    <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-    <label for="inputEmail">Email</label>
-    <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
-    <label for="inputPassword">Password</label>
-    <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
+    <h1 class="h3 mb-3 font-weight-normal text-center mt-5">Veuillez vous connecter 🍻</h1>
+    <label for="inputEmail" class="mt-3">Email</label>
+    <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control mt-2" autocomplete="email" required autofocus>
+    <label for="inputPassword" class="mt-4">Mot De Passe</label>
+    <input type="password" name="password" id="inputPassword" class="form-control mt-2" autocomplete="current-password" required>
 
     <input type="hidden" name="_csrf_token"
            value="{{ csrf_token('authenticate') }}"
@@ -35,8 +36,10 @@
         </div>
     #}
 
-    <button class="btn btn-lg btn-primary" type="submit">
-        Sign in
+    <button class="btn btn-lg btn-primary mt-3 text-center" type="submit">
+        Connexion
     </button>
+
 </form>
+</div>
 {% endblock %}
