--- a/templates/nav.html.twig
+++ b/templates/nav.html.twig
@@ -22,8 +22,8 @@
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <li><a class="dropdown-item" href="{{ path('app_admin_products_index') }}">Gestion des Bières</a></li>
-                <li><a class="dropdown-item" href="#">Gestion des Styles</a></li>
-                <li><a class="dropdown-item" href="#">Gestion des Brasseries</a></li>
+                <li><a class="dropdown-item" href="{{ path('app_admin_styles_index')}}">Gestion des Styles</a></li>
+                <li><a class="dropdown-item" href="{{ path('app_admin_brewries_index')}}">Gestion des Brasseries</a></li>
                 <li><hr class="dropdown-divider"></li>
                 <li class="btn-logout"><a class="dropdown-item" href="#">Déconnexion</a></li>
               </ul>
