--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,7 +14,9 @@
 
     <h1 class="main-title text-center text-primary my-3">{% block h1 %}{% endblock %}</h1>
     
-    {% block body %}{% endblock %}
+    {% block body %}
+    "AF"
+    {% endblock %}
         
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
         <script src="{{ asset('js/script.js') }}"></script>
@@ -22,6 +24,7 @@
         <script>
             feather.replace()
         </script>
+
         {% block javascripts %}{% endblock %}
     </body>
 </html>
