--- a/templates/nav.html.twig
+++ b/templates/nav.html.twig
@@ -10,25 +10,26 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="">Nos Mousses</a>
-            {#                     href ->           {{ path('catalogue') }}        #}
+            <a class="nav-link active" aria-current="page" href="{{path('catalogue')}}">Nos Mousses</a>
           </li>
 
           {% if app.user %}
-          {% if is_granted("ROLE_ADMIN") %}
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle text-danger" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Dashboard
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="{{ path('app_admin_products_index') }}">Gestion des Bières</a></li>
-                <li><a class="dropdown-item" href="#">Gestion des Styles</a></li>
-                <li><a class="dropdown-item" href="#">Gestion des Brasseries</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li class="btn-logout"><a class="dropdown-item" href="#">Déconnexion</a></li>
-              </ul>
-            </li>
-          {% endif %}
+            {% if is_granted("ROLE_ADMIN") %}
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle text-danger" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                {% if is_granted('ROLE_ADMIN') %}
+                  Tableau de Bord
+                {% else %}
+                  {{app.users.name}}
+                {% endif %}
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <li><a class="dropdown-item" href="{{ path('app_admin_products_index') }}">Gestion des Bières</a></li>
+                  <li><a class="dropdown-item" href="{{ path('app_admin_styles_index') }}">Gestion des Styles</a></li>
+                  <li><a class="dropdown-item" href="{{ path('app_admin_brewries_index') }}">Gestion des Brasseries</a></li>
+                </ul>
+              </li>
+            {% endif %}
           {% endif %}
         </ul>
       </div>
