--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -8,6 +8,18 @@
 
 
    
-
+    <div class="row justify-content-center"> 
+        {% for product in RandomProducts %} 
+        <div class="col-md-3 m-4 p-4">
+    <p class="product_category">Produit</p> 
+    <a href="#">{{ product.name|capitalize }}</a>
+           
+            
+        </div>
+        {% else %}
+            <h4 class="text-center">Il n'y a plus de bières disponibles 😔</h4>
+        {% endfor %}
+        
+     </div>
 
 {% endblock %}
