--- a/templates/nav.html.twig
+++ b/templates/nav.html.twig
@@ -1,21 +1,24 @@
 <div class="nav_container">
+  <div class="bg-navbar-container" >
+    <div class="bg-navbar"></div>
+  </div>
   <nav class="navbar navbar-expand-lg navbar-light p-3">
-    
+    {# <img class="mousse" src="{{ asset('/img/Beer-bubbles.gif')}}" alt=""> #}
     <div class="container-fluid">
 
-      <a class="navbar-brand fw-bold fs-2" href="{{ path('app_home')}}">🍺 UNE PETITE MOUSSE</a>
+      <a class="navbar-brand fw-bold fs-2" href="{{ path('app_home')}}"><img id='logo' src="{{ asset("/img/nav/Logo.png")}}" alt="Logo et Accueil"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="">Nos Mousses</a>
-            {#                     href ->           {{ path('catalogue') }}        #}
+            <a class="nav-link active" aria-current="page" href="{{ path('catalogue') }}">Nos Mousses</a>
           </li>
 
           {% if app.user %}
           {% if is_granted("ROLE_ADMIN") %}
+          <div class="administration_nav">
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle text-danger" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Dashboard
@@ -28,17 +31,18 @@
                 <li class="btn-logout"><a class="dropdown-item" href="#">Déconnexion</a></li>
               </ul>
             </li>
+          </div>
           {% endif %}
           {% endif %}
+          <li>
+            <a href="#"><img class="nav-cart-logo"  src="{{ asset('/img/nav/cart.svg')}}" alt=""></a>
+          </li>
         </ul>
       </div>
     </div>
   </nav>
-  <div class="bg-navbar"></div>
 </div>
-
-
-  <div id="connexion_btn_zone mb-5">
+  <div id="connexion_btn_zone">
     {% if not app.user  %}
       <div class="nav-item register_button">
         <a class="nav-link active" aria-current="page" href="{{ path('app_register') }}">Inscription</a>
