--- a/templates/products/catalogue.html.twig
+++ b/templates/products/catalogue.html.twig
@@ -5,12 +5,11 @@
 {% block h1 %}Catalogue des produits{% endblock %}
 
 {% block body %}
-<div class="row">
+<div class="row col-11 m-auto">
 
-    <div class="shadow col-md-3 p-2">
+    <div class="shadow col-md-2 ms-4 px-3 py-2 form-filters">
         <h4>Filtres</h4>
     {{ form_start(formFilter) }}
-
 
         {{ form_row(formFilter.search) }}
 
@@ -25,7 +24,7 @@
 
         {{ form_row(formFilter.order) }}
 
-        <input type="submit" value="Rechercher" class="btn btn-primary col-12 mt-2">
+        <input type="submit" value="Rechercher" class="btn btn-primary mt-2">
 
     {{ form_end(formFilter) }}
     </div>
@@ -38,7 +37,7 @@
                     {% if product.picture %}
                         <img src="{{ asset('img/upload/' ~ product.picture) }}" alt="" class="img150">
                     {% else %}
-                        <img src="{{ asset('img/imageDefault.png')}}" alt="" class="img150">
+                        <img src="{{ asset('img/beer-default.png')}}" alt="" class="img150">
                     {% endif %}
                 </div> 
 
@@ -49,6 +48,8 @@
                     </a>  
                 </div>
             </div>
+            {% else %}
+            <h4 class="text-center">Il n'y a plus de bières disponibles 😔</h4>
         {% endfor %}
     </div>
 
