--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -6,13 +6,19 @@
 
 {% block body %}
 
-    {{ form_start(registrationForm) }}
-        {{ form_row(registrationForm.pseudo) }}
-        {{ form_row(registrationForm.email) }}
-        {{ form_row(registrationForm.password.first) }}
-        {{ form_row(registrationForm.password.second) }}
-        {{ form_row(registrationForm.agreeTerms) }}
+<div class="row text-center justify-content-center">
+    <div class="col-md-4">  
+        {{ form_start(registrationForm) }}
+            {{ form_row(registrationForm.pseudo) }}
+            {{ form_row(registrationForm.email) }}
+            {{ form_row(registrationForm.password.first) }}
+            {{ form_row(registrationForm.password.second) }}
 
-        <button type="submit" class="btn">Register</button>
-    {{ form_end(registrationForm) }}
+            {{ form_row(registrationForm.agreeTerms) }}
+
+
+            <button type="submit" class="btn btn-success">Inscription</button>
+        {{ form_end(registrationForm) }}
+    </div>
+</div>
 {% endblock %}
