--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -3,27 +3,28 @@
 {% block title %} Connexion | {{ parent() }}{% endblock %}
 
 {% block body %}
+
 <div class="row text-center justify-content-center">
-<form class="col-md-4" method="post">
-    {% if error %}
-        <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-    {% endif %}
+    <form class="col-md-4" method="post">
+        {% if error %}
+            <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+        {% endif %}
 
-    {% if app.user %}
-        <div class="mb-3">
-            You are logged in as {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Logout</a>
-        </div>
-    {% endif %}
+        {% if app.user %}
+            <div class="mb-3">
+                Vous êtes déjà connecté en tant que {{ app.user.userIdentifier }}, <a class="btn btn-danger" href="{{ path('app_logout') }}">Déconnexion</a>
+            </div>
+        {% endif %}
 
-    <h1 class="h3 mb-3 font-weight-normal text-center mt-5">Veuillez vous connecter 🍻</h1>
-    <label for="inputEmail" class="mt-3">Email</label>
-    <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control mt-2" autocomplete="email" required autofocus>
-    <label for="inputPassword" class="mt-4">Mot De Passe</label>
-    <input type="password" name="password" id="inputPassword" class="form-control mt-2" autocomplete="current-password" required>
+        <h1 class="h3 mb-3 font-weight-normal text-center mt-5">Veuillez vous connecter 🍻</h1>
+        <label for="inputEmail" class="mt-3">Email</label>
+        <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control mt-2" autocomplete="email" required autofocus>
+        <label for="inputPassword" class="mt-4">Mot De Passe</label>
+        <input type="password" name="password" id="inputPassword" class="form-control mt-2" autocomplete="current-password" required>
 
-    <input type="hidden" name="_csrf_token"
-           value="{{ csrf_token('authenticate') }}"
-    >
+        <input type="hidden" name="_csrf_token"
+            value="{{ csrf_token('authenticate') }}"
+        >
 
     {#
         Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
