--- a/templates/nav.html.twig
+++ b/templates/nav.html.twig
@@ -42,7 +42,7 @@
     </div>
   </nav>
 </div>
-// ZONE DE CONNEXION
+{# ZONE DE CONNEXION #}
   <div id="connexion_btn_zone">
     {% if not app.user  %}
       <div class="nav-item register_button">
