--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -40,6 +40,8 @@
         Connexion
     </button>
 
+    <a href="{{ path("app_forgot_password_request")}}">Mot de Passe Oublié ?</a>
+
 </form>
 </div>
 {% endblock %}
