--- a/templates/admin_products/index.html.twig
+++ b/templates/admin_products/index.html.twig
@@ -23,6 +23,7 @@
         <thead>
             <tr>
                 <th>Nom</th>
+                <th>Pays</th>
                 <th>Prix</th>
                 <th>Description</th>
                 <th>ABV</th>
@@ -40,6 +41,7 @@
         {% for product in products %}
             <tr>
                 <td>{{ product.name|upper }}</td>
+                <td><p title="{{ product.brewries.countries.name }}">{{ product.brewries.countries.flag }}</p></td>
                 <td>{{ product.price }}</td>
                 <td>{% if product.description|length > 100 %}
                     {{ product.description|slice(0,100) }}...
