--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -41,6 +41,8 @@
         Connexion
     </button>
 
+    <a href="{{ path("app_forgot_password_request")}}">Mot de passe oublié ?</a>
+
 </form>
 </div>
 {% endblock %}
