--- a/public/css/style.css
+++ b/public/css/style.css
@@ -96,14 +96,14 @@
 }
 
 .bg-navbar{
-    height: 50px;
+    height: 55px;
     background-color: #fcd80e;
     background-image: url("../img/Beer-bubbles.gif");
     background-position: 100% 25%;
     opacity: 1;
     transition: 0.5s ease-in-out;
     -webkit-mask:linear-gradient(#000, #0000);
-    mask:linear-gradient(#000, #0000);
+          mask:linear-gradient(#000, #0000);
 }
 
 /* NAVBAR  -  FIN  */
@@ -157,8 +157,8 @@
 
 .carousel-control-next-icon,
 .carousel-control-prev-icon{
-    filter: invert(1);
-    transition: 0.2s;
+  filter: invert(1);
+  transition: 0.2s;
 }
 .carousel-control-next-icon:hover, .carousel-control-prev-icon:hover{
     filter:brightness(5);
@@ -200,32 +200,77 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
-    height: 300px;
-
+    height: 350px;
+    padding: 16px;
+    transition: 0.2s;
+    animation: ease-in-out;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    border-radius: 8px;
+    cursor: pointer;
 }
-.catalogue-product-title{
-    height: 50px;
-    color: #000;
-    text-align: center;
+.product-card-container:hover{
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 .link-deco:link{
     text-decoration: none;
 }
+.top-card{
+    display: flex;
+    flex-direction: column;
+    height: 70px;
+    margin-bottom: 5px;
+}
+.catalogue-product-title{
+    font-size: 1.1em;
+    font-weight: 600;
+    color: #000;
+    text-align: center;
+    transition: 0.2s;
+    animation: ease-in-out;
+}
+.catalogue-product-title:hover{
+    color: #FFBD00;
+}
+.card-bottom{
+    width: 95%;
+}
 .img150{
     height: 150px;
-    margin-bottom: 10px;
 }
-
-
-
-/* AVATAR */
-.img80{
-    height: 80px;
-}
-
-
 .price{
     color: #180e00;
 }
+
+.product-styles{
+    display: flex;
+    justify-content: center;
+    font-size: 0.8em;
+}
+
+.btn-sendtocart{
+    background-color: rgba(255, 213, 0, 0.37);
+    border-radius: 8px;
+    padding: 6px;
+    margin-top: 5px;
+    width: 140px;
+    height: 40px;
+    transition: 0.3s;
+    animation: ease-in-out;
+}
+.voir-eye{
+    opacity: 0.7; 
+    transition: 0.2s;
+    animation: ease-in-out;
+}
+.voir-eye:hover{
+ opacity: 1;   
+}
+
+.btn-sendtocart:hover{
+    background-color: rgba(255, 213, 0, 0.903);
+}
+
 /*  CATALOGUE - FIN */
+
+
 
