--- a/templates/products/catalogue.html.twig
+++ b/templates/products/catalogue.html.twig
@@ -7,7 +7,7 @@
 {% block body %}
 <div class="row col-11 m-auto">
 
-    <div class="shadow col-md-2 ms-4 px-3 py-2 form-filters">
+    <div class="shadow col-md-2 px-4 py-3 form-filters">
         <h4>Filtres</h4>
     {{ form_start(formFilter) }}
 
@@ -29,10 +29,13 @@
     {{ form_end(formFilter) }}
     </div>
 
-    <div class="row justify-content-center col-md-9">
+    <div class="row all-catalogue-container justify-content-center col-md-9">
         {% for product in products %}
-            <div class="shadow col-md-3 m-4 p-4">
-                <h3 class="text-center">{{ product.name|capitalize }}</h3>
+            <div class="col-md-3 product-card-container m-4" href="{{ path("fiche_produit", {'id': product.id} ) }}">
+                <div class="top-card">
+                    <a class="link-deco" href="{{  path("fiche_produit", {'id': product.id} )  }}" ><h5 class="text-center catalogue-product-title">{{ product.name|capitalize }}</h5></a>
+                    <h6 class="product-styles mt-2 text-center catalogue-product-styles" > 🍻 {{ product.brewries.name }} - {{ product.styles.name }}</h6>
+                </div>
                 <div class="text-center">
                     {% if product.picture %}
                         <img src="{{ asset('img/upload/' ~ product.picture) }}" alt="" class="img150">
@@ -41,12 +44,18 @@
                     {% endif %}
                 </div> 
 
-                <h4 class="text-center">{{ product.price }} €</h4>
+                <h5 class="text-center mt-2">{{ product.price }} €</h5>
                 <div class="text-center">
                     <a href="{{ path("fiche_produit", {"id" : product.id}) }}">
                         <i class="text-warning" data-feather="eye"></i>
                     </a>  
                 </div>
+                <input class="btn-s btn-sendtocart" type="submit" value="Ajouter au panier" >
+                <div class=" d-flex card-bottom justify-content-between">
+                <a class="link-deco voir-eye" href="{{  path("fiche_produit", {'id': product.id} )  }}">👁️</a>
+                <p>{{ product.brewries.countries.flag }}</p>
+                </div>
+
             </div>
             {% else %}
             <h4 class="text-center">Il n'y a plus de bières disponibles 😔</h4>
