--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -37,11 +37,8 @@
         </div>
     #}
 
-    <button class="btn btn-lg btn-primary mt-3 text-center" type="submit">
-        Connexion
-    </button>
-
-
+    <button class="btn btn-lg btn-primary my-3 text-center" type="submit"> Connexion </button>
+    <br>
     <a href="{{ path("app_forgot_password_request")}}">Mot de passe oublié ?</a>
 
 
