--- a/templates/admin_products/index.html.twig
+++ b/templates/admin_products/index.html.twig
@@ -17,6 +17,26 @@
 
 {% endfor %}
 
+{# <div class="row"> #}
+    <div class="row col-11 d-flex m-auto align-items-center form_line">
+        {{ form_start(formFilter) }}
+
+            <div class="col-2"> {{ form_row(formFilter.search) }} </div>
+                
+            <div class="col-2">{{ form_row(formFilter.brewry) }}</div>
+
+            <div class="col-2">{{ form_row(formFilter.country) }}</div>
+
+            <div class="col-2">{{ form_row(formFilter.style) }}</div>
+
+            <div class="col-2">{{ form_row(formFilter.order) }}</div>
+
+            <input type="submit" value="Rechercher" class="btn btn-primary">
+
+        {{ form_end(formFilter) }}
+    </div>
+{# </div> #}
+
 <div class="d-flex table-responsive">
     <table class="table table-striped table-hover text-center mt-3 mx-5 m-auto">
         <thead class="bg-dark text-white">
@@ -55,7 +75,7 @@
                 <td>{{ product.organic }}</td>
                 <td>{{ product.createdAt ? product.createdAt|date("F d Y 🕐 h:i") }}</td>
                 <td>
-                    <div class="form-check form-switch">
+                    <div class="form-check form-switch d-flex justify-content-center">
                         <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckChecked" checked>
                         <label class="form-check-label" for="flexSwitchCheckChecked"></label>
                     </div>
