--- a/templates/admin_products/show.html.twig
+++ b/templates/admin_products/show.html.twig
@@ -3,61 +3,71 @@
 {% block title %}Products{% endblock %}
 
 {% block body %}
-    <h1>Products</h1>
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ product.id }}</td>
-            </tr>
-            <tr>
-                <th>Name</th>
-                <td>{{ product.name }}</td>
-            </tr>
-            <tr>
-                <th>Price</th>
-                <td>{{ product.price }}</td>
-            </tr>
-            <tr>
-                <th>Description</th>
-                <td>{{ product.description }}</td>
-            </tr>
-            <tr>
-                <th>Picture</th>
-                {% if product.picture %}
-                    <img src="{{asset('img/upload/' ~ product.picture)}}" alt="">
-                {% else %}
-                    <p>Aucune image disponible pour le moment</p>
-                {% endif %}
-                <td>{{ product.picture }}</td>
-            </tr>
-            <tr>
-                <th>CreatedAt</th>
-                <td>{{ product.createdAt ? product.createdAt|date('Y-m-d H:i:s') : '' }}</td>
-            </tr>
-            <tr>
-                <th>Abv</th>
-                <td>{{ product.abv }}</td>
-            </tr>
-            <tr>
-                <th>Ebc</th>
-                <td>{{ product.ebc }}</td>
-            </tr>
-            <tr>
-                <th>Glutenfree</th>
-                <td>{{ product.glutenfree }}</td>
-            </tr>
-            <tr>
-                <th>Organic</th>
-                <td>{{ product.organic }}</td>
-            </tr>
-        </tbody>
-    </table>
+<div class="col-md-11 mx-auto">
+    <a class="btn btn-dark" href="{{ path('app_admin_products_index') }}">back to list</a>
+</div>
 
-    <a href="{{ path('app_admin_products_index') }}">back to list</a>
+<div class="row justify-content-center">
+    <div class="col-md-3 p-0 d-flex align-items-center justify-content-center">
+        <td><img src="{{asset('img/upload/' ~ product.picture)}}" alt=""></td>
+    </div>
 
-    <a href="{{ path('app_admin_products_edit', {'id': product.id}) }}">edit</a>
+    <div class="col-md-7 p-0">
 
-    {{ include('admin_products/_delete_form.html.twig') }}
+        <h1 class="mb-5">{{ product.name }}</h1>
+
+        <table class="table mt-5">
+            <tbody>
+                <tr>
+                    <th>Brasserie</th>
+                    <td>{{ product.brewries.name }}</td>
+                </tr>
+                <tr>
+                    <th>Nom</th>
+                    <td>{{ product.name }}</td>
+                </tr>
+                <tr>
+                    <th>Pays d'origine</th>
+                    <td>{{ product.brewries.countries.flag }} {{ product.brewries.countries.name }}</td>
+                </tr>
+                <tr>
+                    <th>Prix</th>
+                    <td>{{ product.price }} €</td>
+                </tr>
+                <tr>
+                    <th>Description</th>
+                    <td>{{ product.description }}</td>
+                </tr>
+                <tr>
+                    <th>Date d'ajout</th>
+                    <td>{{ product.createdAt ? product.createdAt|date('Y-m-d 🕐 H:i:s') : '' }}</td>
+                </tr>
+                <tr>
+                    <th>Titre alcoolique</th>
+                    <td>{{ product.abv }}% VOL</td>
+                </tr>
+                <tr>
+                    <th>Degré d'amertume</th>
+                    <td>{{ product.ebc }} EBC</td>
+                </tr>
+                <tr>
+                    <th>Sans glutène</th>
+                    <td>{{ product.glutenfree }}</td>
+                </tr>
+                <tr>
+                    <th>Biologique</th>
+                    <td>{{ product.organic }}</td>
+                </tr>
+            </tbody>
+        </table>
+
+        
+
+        <a class="btn btn-warning col-md-2 mt-3" href="{{ path('app_admin_products_edit', {'id': product.id}) }}">Modifier</a>
+
+    </div>
+</div>
+
+
 {% endblock %}
