--- a/templates/nav.html.twig
+++ b/templates/nav.html.twig
@@ -41,7 +41,7 @@
             {% endif %}
           {% endif %}
           <li>
-            <a href="#"><img class="nav-cart-logo"  src="{{ asset('/img/nav/cart.svg')}}" alt=""></a>
+            <a href="{{path('app_cart')}}"><img class="nav-cart-logo"  src="{{ asset('/img/nav/cart.svg')}}" alt=""></a>
           </li>
         </ul>
       </div>
