--- a/templates/products/catalogue.html.twig
+++ b/templates/products/catalogue.html.twig
@@ -44,13 +44,13 @@
                     {% endif %}
                 </div> 
 
-                <h5 class="text-center mt-2">{{ product.price }} €</h5>
+                <h5 class="text-center mt-2">{{ product.price|number_format(2) }} €</h5>
                 <div class="text-center">
                     <a href="{{ path("fiche_produit", {"id" : product.id}) }}">
                         <i class="text-warning" data-feather="eye"></i>
                     </a>  
                 </div>
-                <input class="btn-s btn-sendtocart" type="submit" value="Ajouter au panier" >
+                <a href="{{ path('cart_add', {'id': product.id}) }}"><input class="btn-s btn-sendtocart" type="submit" value="Ajouter au panier"></a>
                 <div class=" d-flex card-bottom justify-content-between">
                 <a class="link-deco voir-eye" href="{{  path("fiche_produit", {'id': product.id} )  }}">👁️</a>
                 <p>{{ product.brewries.countries.flag }}</p>
