--- a/templates/admin_products/show.html.twig
+++ b/templates/admin_products/show.html.twig
@@ -33,7 +33,7 @@
                 </tr>
                 <tr>
                     <th>Prix</th>
-                    <td>{{ product.price }} €</td>
+                    <td>{{ product.price|number_format(2) }} €</td>
                 </tr>
                 <tr>
                     <th>Description</th>
