--- a/templates/products/fiche_produit.html.twig
+++ b/templates/products/fiche_produit.html.twig
@@ -45,7 +45,7 @@
                 </tr>
                 <tr>
                     <th>Prix</th>
-                    <td>{{ product.price }} €</td>
+                    <td>{{ product.price|number_format(2) }} €</td>
                 </tr>
                 <tr>
                     <th>Description</th>
