--- a/templates/admin_brewries/index.html.twig
+++ b/templates/admin_brewries/index.html.twig
@@ -1,11 +1,13 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Brewries index{% endblock %}
+{% block title %}Gestion des brasseries | {{ parent() }} {% endblock %}
+
+{% block h1 %}Gestion des brasseries{% endblock %}
 
 {% block body %}
 
 <div class="col-md-10 mx-auto">
-    <h1>Brewries index</h1>
+
 
     <table class="table">
         <thead>
