--- a/templates/admin_brewries/show.html.twig
+++ b/templates/admin_brewries/show.html.twig
@@ -1,9 +1,11 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Brewries{% endblock %}
+{% block title %}Gestion des brasseries | {{ parent() }} {% endblock %}
+
+{% block h1 %}Gestion des brasseries{% endblock %}
 
 {% block body %}
-    <h1>Brewries</h1>
+    <h1>Brasseries</h1>
 
     <table class="table">
         <tbody>
