--- a/templates/admin_styles/index.html.twig
+++ b/templates/admin_styles/index.html.twig
@@ -1,6 +1,8 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Styles index{% endblock %}
+{% block title %}Gestion des styles | {{ parent() }} {% endblock %}
+
+{% block h1 %}Gestion des styles{% endblock %}
 
 {% block body %}
 <div class="col-md-10 mx-auto">
