--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -2,40 +2,41 @@
 
 {% block title %}Accueil | {{ parent() }} {% endblock %}
 
-{% block h1 %}Accueil{% endblock %}
+{# {% block h1 %}Accueil{% endblock %} #}
 
 {% block body %}
 
 
     {# CAROUSEL #}
 
-        <h4 class="text-warning text-center my-3">Quelques unes de nos petites mousses 🍺</h4>
+        <h4 class="text-warning text-center mb-4">Quelques unes de nos petites mousses 🍺</h4>
 
-
-        <div id="carouselExampleIndicators" class="carousel carousel-container align-items-center slide" data-bs-ride="carousel">
-            <div class="carousel-indicators">
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
+        <div class="carousel-complete">
+            <div id="carouselExampleIndicators" class="carousel carousel-container align-items-center slide" data-bs-ride="carousel">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
+                </div>
+            <div class="carousel-inner card-container ">
+                {% for k, product in RandomProducts %} 
+                <div class="carousel-item {% if k == 0 %} active {% endif %}">
+                        <a href="{{  path("fiche_produit", {'id': product.id} )  }}"><img class="d-block m-auto image-card" src="{{ asset('img/upload/' ~ product.picture ) }}" alt="Image de Bière"></a> 
+                        <a class="product-name-link" href="{{  path("fiche_produit", {'id': product.id} )  }}"><p class="product-name">{{ product.name|capitalize }}</p></a>
+                </div>
+                {% endfor %}
             </div>
-        <div class="carousel-inner card-container ">
-            {% for k, product in RandomProducts %} 
-            <div class="carousel-item {% if k == 0 %} active {% endif %}">
-                    <a href="{{  path("fiche_produit", {'id': product.id} )  }}"><img class="d-block m-auto image-card" src="{{ asset('img/upload/' ~ product.picture ) }}" alt="Image de Bière"></a> 
-                    <a class="product-name-link" href="{{  path("fiche_produit", {'id': product.id} )  }}"><p class="product-name">{{ product.name|capitalize }}</p></a>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Précédent</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                <span class="carousel-control-next-icon " aria-hidden="true"></span>
+                <span class="visually-hidden">Suivant</span>
+            </button>
             </div>
-            {% endfor %}
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Précédent</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-            <span class="carousel-control-next-icon " aria-hidden="true"></span>
-            <span class="visually-hidden">Suivant</span>
-        </button>
         </div>
 
     {# MODALE COOKIES #}
