--- a/templates/profil/index.html.twig
+++ b/templates/profil/index.html.twig
@@ -41,12 +41,13 @@
         </tbody>
     </table>
     </div>
+    <div class="d-flex my-4 justify-content-between">
+    <a href="{{ path('app_profil_edit', {'id': users.id}) }}"><button type="submit" class="btn btn-success ms-5">Modifier</button></a>
 
     <form method="post" action="{{ path('app_profil_delete', {'id': users.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
         <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ users.id) }}">
-        <button class="btn">Delete</button>
+        <button class="btn btn-danger me-5">Delete</button>
     </form>
-
-    <a href="{{ path('app_profil_edit', {'id': users.id}) }}"><button type="submit" class="btn btn-success">Modifier</button></a>
+    </div>
 
 {% endblock %}
